--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-scrollspy": "^2.3.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
